--- a/Related to Sensing data with both gyro and accelo/Webpage/ala/maintaingSessions.html
+++ b/Related to Sensing data with both gyro and accelo/Webpage/ala/maintaingSessions.html
@@ -15,7 +15,27 @@
    var currTime = Math.floor(Date.now() / 1000);
 
    var timeTracker = new Array();
+
+   /*
+   timeTracker Details :
+   Index     Denotes                                           Initialised-With
+   0         Total Duration of work time within a session       0
+   1         state of started/stopped/new                      -1
+   2         prev start time                                   -1
+   3         prev end time                                     -1
+   4         Session Number for particular sensor/device       -1
+   5         RSSI VALUE                                         1 //denoting OUTOFRANGE
+   */
    var devicesHistory = new Array();
+
+   /*
+   devicesHistory Details :
+   Index     Denotes                                           Initialised-With
+   0         Last Session Number                                1
+   1         Last Work Duration                                -1
+   2         Total Work Time of Device                         -1
+   3         Last INRANGE or OUTOFRANGE                        -1
+   */
    //document.querySelector('#tLimitID').textContent = thresholdLimit;
    //console.log(typeof(threshoLimit));
 
@@ -30,7 +50,6 @@
     var prevX = 0;
     var prevY = 0;
     var prevZ = 0;
-    var activityMonitor = -1;
     var prevaX = 0;
     var prevaY = 0;
     var prevaZ = 0;
@@ -95,25 +114,11 @@
                   document.querySelector('#ayID').textContent = yAccel;
                   document.querySelector('#azID').textContent = zAccel;
 
-                  var UUID = parseFloat(tempData[6]);
-                  var thresholdRSSI = parseFloat(document.querySelector('#tDataC').value);
-                  //console.log('Threshold = '+thresholdRSSI);
-
-                  //console.log(typeof(timeTracker[UUID])=='undefined');
-                  if(typeof(timeTracker[UUID])=='undefined'){
-                    timeTracker[UUID]=[0,-1,-1,-1,-1,-1];
-                    //console.log('Not Found Dude!!!!!!!');
-
-                  }
-                  //console.log('Found Dude!!!!!!!');
-
-                  var prevRSSI = parseFloat(timeTracker[UUID][5]);
-
-                  //timeTracker[tempData[3]][6]=tempData;
                   //document.querySelector('#tLimitID').textContent = thresholdLimit+" units";
 
+                  var activityMonitor = -1;
                   initialCounter++;
-                  if(initialCounter<=100){
+                  if(initialCounter<=50){
                     initialListX.push(xGyro);
                     initialListY.push(yGyro);
                     initialListZ.push(zGyro);
@@ -148,7 +153,6 @@
                     }
                     else{
                       document.querySelector('#vibID').textContent = "Activity Stopped !!!";
-                      activityMonitor = -1;
                     }
 
                     var acceloStat = "";
@@ -187,40 +191,52 @@
                     prevaX = xAccel;
                     prevaY = yAccel;
                     prevaZ = zAccel;
-                    calStatus === true;
+                    calStatus = true;
                   }
 
-                  if(calStatus === true){
-                    document.querySelector('#oLimitID').textContent = "Callibrated !!!";
-                    //timeTracker[tempData[6]][4]=1;
+              if(calStatus === true){
 
-                    if(prevRSSI>=thresholdRSSI&&prevRSSI<=0){
-                      console.log('INRANGE ');
-                        if(activityMonitor==1){
-                            if(timeTracker[UUID][1]==-1){ //new record
-                              timeTracker[2]=timeTracker[3]=Math.floor(Date.now() / 1000);
-                              timeTracker[UUID][1]=0;//Started
-                            }
+                        var UUID = parseFloat(tempData[6]);
+                        document.querySelector('#oLimitID').textContent = "Callibrated !!!";
+                        //console.log(typeof(timeTracker[UUID])=='undefined');
 
-                            else if(timeTracker[UUID][1]==0){//already started
-                              timeTracker[3]=Math.floor(Date.now() / 1000);
+                        if(typeof(devicesHistory[UUID])=='undefined'||devicesHistory[UUID][3]==0){
+                            //console.log('im here 0');
+                            //console.log(typeof(devicesHistory[UUID]));
+                        }
+                        else{
+                        //not defined in devicesHistory or timeTracker
+                        //do nothing
+                         console.log('im here 1');
+                          var prevRSSI = parseFloat(timeTracker[UUID][5]);
+                          var thresholdRSSI = parseFloat(document.querySelector('#tDataC').value);
+                          //console.log('prevRSSI = '+prevRSSI);
+                            //console.log('INRANGE1 ');
+                              if(activityMonitor==1){
+                                console.log('active');
+                                  if(timeTracker[UUID][1]==-1){ //new record
+                                    timeTracker[UUID][2]=Math.floor(Date.now() / 1000);
+                                    timeTracker[UUID][3]=Math.floor(Date.now() / 1000);
+                                    timeTracker[UUID][1]=0;//Started
+                                  }
+                                  else{//already started
+                                    timeTracker[UUID][3]=Math.floor(Date.now() / 1000);
+                                    timeTracker[UUID][0]=timeTracker[UUID][3]-timeTracker[UUID][2];
+                                  }
                             }
+                            else{ // now stopped
+                              //already initialised
+                              console.log('notactive');
+                                timeTracker[UUID][1]=-1;//again start a new session
+                                timeTracker[UUID][0]=timeTracker[UUID][3]-timeTracker[UUID][2];
+                                console.log('total time : '+timeTracker[UUID][0] );
+                                //timeTracker[UUID][2]=timeTracker[UUID][3]=-1;
+                            }
+                            console.log(timeTracker[UUID]);
                       }
-                      else{ // now stopped
-                        //already initialised
-                          timeTracker[UUID][1]=-1;//again start a new session
-                          timeTracker[UUID][0]+=timeTracker[UUID][3]-timeTracker[UUID][2];
-                          timeTracker[UUID][2]=timeTracker[UUID][3]=-1;
-                      }
-                    }
-                    else{
-                      console.log('OUTOFRANGE ');
-                      //console.log('OutOfRange 123!!!!!!!!!!!!!!!!!!!!!!');
-                    }
-                      //console.log(UUID + 'TotalWorkTime = '+timeTracker[UUID][0]);
                   }
                   else{
-                    document.querySelector('#oLimitID').textContent = (100-initialCounter) + " records !!!!";
+                    document.querySelector('#oLimitID').textContent = (50-initialCounter) + " records !!!!";
                   }
                   /*console.log("Topic:     " + message.destinationName);
                   //console.log("QoS:       " + message.qos);
@@ -230,7 +246,7 @@
                   //console.log(message);*/
                 }  //take out this multi line comment da!!!!!
               }
-                else if(msg.includes(":")){
+              else if(msg.includes(":")){
                   //BLE PROXIMITY SCANNING PART
                   //topicFlag=-1;
                     //topics = "outsinhala12345";
@@ -244,48 +260,73 @@
                     document.querySelector('#oLimitIDa').textContent = UUID;
                     document.querySelector('#oLimitIDb').textContent = RSSI;
 
-                    //console.log(typeof(timeTracker[UUID])=='undefined');
-                    if(typeof(timeTracker[UUID])=='undefined'){
-                      timeTracker[UUID]=[0,-1,-1,-1,-1,-1];
-                      //timeTracker[UUID][5]=RSSI;
-                      //console.log('Not Found Dude!!!!!!!');
-                    }
-                    //console.log(timeTracker);
-                    //console.log('Found Dude!!!!!!!');
-                    var prevRSSI = parseFloat(timeTracker[UUID][5]);
-
                     var thresholdRSSI = parseFloat(document.querySelector('#tDataC').value);
-                    if(RSSI>=thresholdRSSI&&RSSI<=0){
-                      console.log('INRANGE ');
-                      /*if(activityMonitor==1){
-                          if(timeTracker[UUID][1]==-1){ //new record
-                            timeTracker[UUID][2]=timeTracker[UUID][3]=Math.floor(Date.now() / 1000);
-                            timeTracker[UUID][1]=0;//Started
-                          }
-                          else if(timeTracker[UUID][1]==0){//already started
-                            timeTracker[UUID][3]=Math.floor(Date.now() / 1000);
-                          }
+                    if(typeof(devicesHistory[UUID])=='undefined'){
+                    //if a device is discovered
+                      console.log('Defined '+UUID);
+                      devicesHistory[UUID]=[1,-1,0,-1];
+                      timeTracker[UUID]=[0,-1,-1,-1,1,RSSI];
+                      if(RSSI>=thresholdRSSI&&RSSI<=0){
+                        //within range
+                        devicesHistory[UUID][3] = 1;
+                      }
+                      else{
+                        //OUTOFRANGE
+                        devicesHistory[UUID][3] = 0;
+                        devicesHistory[UUID][0] = 0; //this session is not valid
+
+                        //deleting UUID from timeTracker
+                        var index = timeTracker.indexOf(UUID);
+                        if (index > -1) {
+                          timeTracker.splice(index, 1);
+                        }
+                      }
                     }
-                    else{ // now stopped
-                      //already initialised
-                      timeTracker[UUID][1]=-1;//again start a new session
-                      timeTracker[UUID][0]+=timeTracker[UUID][3]-timeTracker[UUID][2];
-                      timeTracker[UUID][2]=timeTracker[UUID][3]=-1;
-                    }*/
+                    else if(typeof(timeTracker[UUID])=='undefined'){
+                    //device has already been detected but is now only within range
+
+                      console.log('Defined Device '+UUID);
+                      if(RSSI>=thresholdRSSI&&RSSI<=0){
+                      timeTracker[UUID]=[0,-1,-1,-1,devicesHistory[UUID][0]+1,RSSI];
+                      devicesHistory[UUID][3]=1;
                     }
                     else{
-                      console.log('OUTOFRANGE ');
-                      timeTracker[UUID][1]=-1;//again start a new session
-                      timeTracker[UUID][0]+=timeTracker[UUID][3]-timeTracker[UUID][2];
-                      timeTracker[UUID][2]=timeTracker[UUID][3]=-1;
-                      //alert("UUID "+UUID +" Active Time : "+timeTracker[UUID][0]+" RSSI : "+RSSI+" thresholdRSSI : "+thresholdRSSI);
-                      //console.log('OutOfRange456 !!!!!!!!!!!!!!!!!!!!!!');
-                      //console.log(UUID + 'TotalWorkTime = '+timeTracker[UUID][0]);
-                      console.log('Total Work Time = '+timeTracker[UUID][0]);
+                      //do nothing
+                      devicesHistory[UUID][3]=0;
                     }
+                    }
+                    else
+                    {
+                      //within range already
+                        if(RSSI>=thresholdRSSI&&RSSI<=0){
+                          console.log('INRANGE ');
+                          timeTracker[UUID][5]=RSSI;
+                          devicesHistory[UUID][3]=1;
+                          //console.log('RSSI'+RSSI);
+                        }
+                        else{
+                          //console.log('OUTOFRANGE ');
+                          timeTracker[UUID][1]=-1;//again start a new session
+                          timeTracker[UUID][0]+=timeTracker[UUID][3]-timeTracker[UUID][2];
+                          timeTracker[UUID][2]=timeTracker[UUID][3]=-1;
 
-                    //console.log('RSSI'+RSSI);
-                    timeTracker[UUID][5]=RSSI;
+
+                          console.log('UUID: '+UUID+' SESSION: '+devicesHistory[UUID][0]+' Total Work Time = '+timeTracker[UUID][0]);
+
+                          //updating devicesHistory
+                          devicesHistory[UUID][0]+=1;
+                          devicesHistory[UUID][1]=timeTracker[UUID][0];
+                          devicesHistory[UUID][2]+=timeTracker[UUID][0];
+                          devicesHistory[UUID][3]=0;
+
+                          //deleting UUID from timeTracker
+                          var index = timeTracker.indexOf(UUID);
+                          if (index > -1) {
+                            timeTracker.splice(index, 1);
+                            console.log('DELETEDDDDDDDDDDDDDDDDDDDDDD');
+                          }
+                        }
+                  }
               }
               topicFlag*=-1;
               if(topicFlag==-1){
@@ -305,13 +346,13 @@
       console.log(msg);
     }*/
 
-    console.log("Time : "+(currTime-startTime)+" "+msg);
+    //console.log("Time : "+(currTime-startTime)+" "+msg);
   }
   console.log('no data');
   //console.log(Math.floor(Date.now() / 1000));
   //onConnect();
 }
-      function onConnectionLost(message){-
+      function onConnectionLost(message){
       console.log("connection lost "+message.errorMessage);
       //document.getElementById("status").innerHTML = "Connection Lost";
       //document.getElementById("status_messages").innerHTML ="Connection Lost";
@@ -321,6 +362,7 @@
       }
       function onFailure(message) {
         console.log("Failed");
+        console.log(message.errorMessage);
         //document.getElementById("status_messages").innerHTML = "Connection Failed- Retrying";
         setTimeout(MQTTconnect, reconnectTimeout);
       }
